# EnterpriseMultiAgentRAGSystem

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: pdf_agent.py  router_agent.py  sql_agent.py  web_agent.py
app/api/: chat.py  health.py  upload.py
app/database/: db.py  models.py  schemas.py
app/rag/: embeddings.py  ingestion.py  retriever.py  vector_store.py
app/services/: chat_service.py  pdf_service.py
app/tests/: test_system.py
app/utils/: logger.py
details/: project_structure.html
